gcc/testsuite/gm2/iso/pass/forloopbyconst.mod
MODULE forloopbyconst ;


CONST
   block = 4 ;


(*
   init -
*)

PROCEDURE init ;
VAR
   i, n: CARDINAL ;
BEGIN
   n := 10 ;
   FOR i := 1 TO n BY block DO

   END
END init ;


BEGIN
   init
END forloopbyconst.
